--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi mini E-commerce</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Simulador de un Mini E-commerce</h1>
     <p>Proyecto en desarrollo utilizando lógica de JavaScript</p>
-    
 
-    <script src="script.js"></script> <!-- Vincular el JS -->
+    <div id="formulario">
+        <input type="text" id="inputProducto" placeholder="Nombre del producto">
+        <button id="botonAgregar">Agregar al carrito</button>
+        <button id="botonVaciar">Vaciar carrito</button>
+    </div>
+    
+    <h2>Carrito de compras</h2>
+    <ul id="listaCarrito"></ul>
+
+    <script src="script2.js"></script> <!-- Vincular el JS -->
 </body>
 </html>
