--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi mini E-commerce</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Toastify -->
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
 </head>
 <body>
     <h1>Simulador de un Mini E-commerce</h1>
     <p>Proyecto en desarrollo utilizando lógica de JavaScript</p>
 
-    <div id="formulario">
-        <input type="text" id="inputProducto" placeholder="Nombre del producto">
-        <button id="botonAgregar">Agregar al carrito</button>
-        <button id="botonVaciar">Vaciar carrito</button>
-    </div>
+    <h2>Productos disponibles</h2>
+    <div id="contenedorProductos"></div>
     
     <h2>Carrito de compras</h2>
     <ul id="listaCarrito"></ul>
+
+    <div id="formulario">
+        <button id="botonVaciar">Vaciar carrito</button>
+        <button id="botonPagar">Pagar</button>
+    </div>
 
     <script src="script2.js"></script> <!-- Vincular el JS -->
 </body>
